JENKINS/JENKINS-DEPLOYMENT/APP-4/kube/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
 

spec:
  replicas: 1

  selector:
    matchLabels:
      app: app4-backend

  template:
    metadata:
      labels:
        app: app4-backend

    spec:
      containers:
        - name: backend
          image: docker.io/payalkharat/kubernetes-ingress:app4-backend

          ports:
            - containerPort: 8000
