JENKINS/JENKINS-DEPLOYMENT/APP-4/kube/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app4-backend


spec:
  type: ClusterIP

  selector:
    app: app4-backend

  ports:
    - port: 8000
      targetPort: 8000
