JENKINS/JENKINS-DEPLOYMENT/APP-4/kube/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app4-frontend
 

spec:
  type: ClusterIP

  selector:
    app: app4-frontend

  ports:
    - port: 80
      targetPort: 80
